--- a/config/database.yml
+++ b/config/database.yml
@@ -13,9 +13,9 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  host: localhost
+  username: <%= Figaro.env.db_username %>
+  password: <%= Figaro.env.db_password %>
+  host: <%= Figaro.env.db_host %>
 
 development:
   <<: *default
